--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,7 +5,8 @@ html {
     font-size: 62.5%;
     position: relative;
     min-height: 100%;
-    overflow:auto;
+    overflow-x: auto;
+    overflow-y: hidden;
 }
 
 body#main-body {
@@ -98,11 +99,11 @@ ngb-typeahead-window.dropdown-menu {
     }
 }
 
-::-webkit-scrollbar-track {
-    display: none;
-    border-color: transparent;
-    background-color:transparent;
-}
+//::-webkit-scrollbar-track {
+//    display: none;
+//    border-color: transparent;
+//    background-color:transparent;
+//}
 ::-webkit-scrollbar * {
     background:transparent;
 }
